@@ -1,3 +1,9 @@
+2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* src/Utilities.cs, src/GphotoException.cs, src/File.cs, src/FileSystem.cs,
+	  src/ErrorCode.cs, src/Camera.cs, src/Abilities.cs: Added XML
+	  documentation for all public methods/classes
+
 2007-10-21  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* src/GphotoException.cs, src/ErrorCode.cs, src/FileSystem.cs,
